--- a/cp2020/templates/admin/skill/index.html.twig
+++ b/cp2020/templates/admin/skill/index.html.twig
@@ -2,34 +2,112 @@
 
 {% block title %}Skill index{% endblock %}
 
+{% block subheader %}
+    <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
+        <div class=" container  d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <!--begin::Info-->
+            <div class="d-flex align-items-center flex-wrap mr-1">
+                <!--begin::Mobile Toggle-->
+                <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
+                    <span></span>
+                </button>
+
+                <div class="d-flex align-items-baseline flex-wrap mr-5">
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Навыки</h5>
+
+                    <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Главная</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Модератор</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Skill Index</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="d-flex align-items-center">
+                <a href="{{ path('skill_new') }}" class="btn btn-primary font-weight-bolder btn-sm">
+                    Создать новый навык
+                </a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block body %}
-    <h1>Skill index</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card card-custom card-stretch gutter-b">
+                    <div class="card-body pt-2 pb-0">
+                        <!--begin::Table-->
+                        <div class="table-responsive">
+                            <table class="table table-borderless table-vertical-center">
+                                <thead>
+                                    <tr>
+                                        <th class="p-0" style="width: 50px"></th>
+                                        <th class="p-0" style="min-width: 150px"></th>
+                                        <th class="p-0" style="min-width: 140px"></th>
+                                        <th class="p-0" style="min-width: 100px"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for skill in skills %}
+                                    <tr>
+                                        <td class="pl-0 py-5">
+                                            <div class="symbol symbol-50 symbol-light mr-2">
+                                                <span class="symbol-label">
+                                                    <img src="/assets/media/svg/misc/003-puzzle.svg" class="h-50 align-self-center" alt="">
+                                                </span>
+                                            </div>
+                                        </td>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for skill in skills %}
-            <tr>
-                <td>{{ skill.id }}</td>
-                <td>{{ skill.title }}</td>
-                <td>
-                    <a href="{{ path('skill_show', {'id': skill.id}) }}">show</a>
-                    <a href="{{ path('skill_edit', {'id': skill.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="3">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                                        <td class="pl-0">
+                                            <a href="#" class="text-dark font-weight-bolder text-hover-primary mb-1 font-size-lg">
+                                                {{ skill.title }}
+                                            </a>
 
-    <a href="{{ path('skill_new') }}">Create new</a>
+                                            <span class="text-muted font-weight-bold d-block">Skill</span>
+                                        </td>
+
+                                        <td class="text-right">
+                                            <span class="text-muted font-weight-bold">
+                                                ID: {{ skill.id }}
+                                            </span>
+                                        </td>
+
+                                        <td class="text-right pr-0">
+                                            <a href="{{ path('skill_show', {'id': skill.id}) }}" class="btn btn-light">
+                                                Смотреть
+                                            </a>
+
+                                            <a href="{{ path('skill_edit', {'id': skill.id}) }}" class="btn btn-light">
+                                                Изменить
+                                            </a>
+                                        </td>
+                                    </tr>
+                                    {% else %}
+                                    <tr>
+                                        <td colspan="3">no records found</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                        <!--end::Table-->
+                    </div>
+                    <!--end::Body-->
+                </div>
+                <!--end::Base Table Widget 2-->
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
+{% block javascripts %}
+    <script src="/assets/js/pages/widgets.js?v=7.0.6"></script>
 {% endblock %}
