--- a/cp2020/templates/registration/register.html.twig
+++ b/cp2020/templates/registration/register.html.twig
@@ -6,6 +6,8 @@
     <link href="assets/css/pages/login/login-2.css?v=7.0.6" rel="stylesheet" type="text/css" />
 {% endblock %}
 
+{% block header %}<!-- hidden-->{% endblock %}
+
 {% block body %}
     <div class="login login-2 login-signin-on d-flex flex-column flex-lg-row flex-column-fluid bg-white" id="kt_login">
         <div class="login-aside order-2 order-lg-1 d-flex flex-row-auto position-relative overflow-hidden">
