--- a/cp2020/templates/admin/layout.html.twig
+++ b/cp2020/templates/admin/layout.html.twig
@@ -10,6 +10,7 @@
         <a href="{{ path('stage_index') }}">Этапы</a>
         <a href="{{ path('user_stage_progress_index') }}">Этапы студента</a>
         <a href="{{ path('vacancy_index') }}">Вакансии</a>
+        <a href="{{ path('company_index') }}">Компании</a>
     </div>
     {% block body %}{% endblock %}
     {% block javascripts %}{% endblock %}
