added user edit, added UserEducation

--- a/cp2020/templates/admin/layout.html.twig
+++ b/cp2020/templates/admin/layout.html.twig
@@ -9,6 +9,11 @@
                 <div id="kt_header_menu" class="header-menu header-menu-left header-menu-mobile  header-menu-layout-default ">
                     <ul class="menu-nav">
                         <li class="menu-item menu-item-rel">
+                            <a href="{{ path('user_index') }}" class="menu-link">
+                                <span class="menu-text">Студенты</span>
+                            </a>
+                        </li>
+                        <li class="menu-item menu-item-rel">
                             <a href="{{ path('skill_index') }}" class="menu-link">
                                 <span class="menu-text">Навыки</span>
                             </a>
@@ -35,6 +40,12 @@
                                 <span class="menu-text">Компании</span>
                             </a>
                         </li>
+                        <li class="menu-item menu-item-rel">
+                            <a href="{{ path('education_index') }}" class="menu-link">
+                                <span class="menu-text">Учебные заведения</span>
+                            </a>
+                        </li>
+
                     </ul>
                 </div>
             </div>
