--- a/cp2020/templates/admin/stage/show.html.twig
+++ b/cp2020/templates/admin/stage/show.html.twig
@@ -15,6 +15,13 @@
                 <th>Title</th>
                 <td>{{ stage.title }}</td>
             </tr>
+            <tr>
+                <th>Скиллы</th>
+                <td>{% for skill in stage.skills %}
+                {{ skill.title }}
+                    {% endfor %}
+                </td>
+            </tr>
         </tbody>
     </table>
 
