--- a/cp2020/templates/base.html.twig
+++ b/cp2020/templates/base.html.twig
@@ -11,6 +11,7 @@
     <link href="/assets/plugins/global/plugins.bundle.css?v=7.0.6" rel="stylesheet" type="text/css" />
     <link href="/assets/plugins/custom/prismjs/prismjs.bundle.css?v=7.0.6" rel="stylesheet" type="text/css" />
     <link href="/assets/css/style.bundle.css?v=7.0.6" rel="stylesheet" type="text/css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
     {% block stylesheets %}{% endblock %}
 
@@ -227,7 +228,7 @@
             "font-family": "Poppins"
         };
     </script>
-    
+
     <script src="/assets/plugins/global/plugins.bundle.js?v=7.0.6"></script>
     <script src="/assets/plugins/custom/prismjs/prismjs.bundle.js?v=7.0.6"></script>
     <script src="/assets/js/scripts.bundle.js?v=7.0.6"></script>
