--- a/cp2020/templates/admin/stage/new.html.twig
+++ b/cp2020/templates/admin/stage/new.html.twig
@@ -2,10 +2,60 @@
 
 {% block title %}New Stage{% endblock %}
 
+{% block subheader %}
+    <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
+        <div class="container d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <div class="d-flex align-items-center flex-wrap mr-1">
+                <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
+                    <span></span>
+                </button>
+
+                <div class="d-flex align-items-baseline flex-wrap mr-5">
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Создание этап</h5>
+
+                    <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Главная</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Модератор</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Создание этапа</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block body %}
-    <h1>Create new Stage</h1>
+    <div class="container">
+        <div class="card gutter-b">
+            <div class="card-body">
+                <form method="post">
+                    <div class="form-group">
+						<label>Название этапа</label>
+						<input type="text" class="form-control" name="stage[title]">
+					</div>
 
-    {{ include('admin/stage/_form.html.twig') }}
+                    {{ form_widget(form._token) }}
 
-    <a href="{{ path('stage_index') }}">back to list</a>
+                    <div class="form-group">
+                        <label>Навыки</label>
+                        <select name="stage[skills][]" required="required" class="form-control" multiple="multiple">
+                            {% for choice in form.skills.vars.choices %}
+                                <option value="{{ choice.value }}">{{ choice.label }}</option>
+                            {% endfor %}
+                        </select>
+                    </div>
+
+                    <button class="btn btn-primary" type="submit">Создать</button>
+                </form>
+            </div>
+        </div>
+
+        <a href="{{ path('skill_index') }}" class="btn btn-success">Назад к списку этапов</a>
+    </div>
 {% endblock %}
