--- a/cp2020/templates/registration/register.html.twig
+++ b/cp2020/templates/registration/register.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Register{% endblock %}
+{% block title %}Регистрация на портале GC.Platform{% endblock %}
 
 {% block stylesheets %}
     <link href="assets/css/pages/login/login-2.css?v=7.0.6" rel="stylesheet" type="text/css" />
@@ -13,7 +13,7 @@
         <div class="login-aside order-2 order-lg-1 d-flex flex-row-auto position-relative overflow-hidden">
             <div class="d-flex flex-column-fluid flex-column justify-content-between py-9 px-7 py-lg-13 px-lg-35">
                 <a href="#" class="text-center pt-2">
-                    <img src="assets/media/logos/logo.png" class="max-h-75px" alt="" />
+                <!--    <img src="assets/media/logos/logo.png" class="max-h-75px" alt="" /> -->
                 </a>
 
                 <div class="d-flex flex-column-fluid flex-column flex-center">
@@ -39,6 +39,24 @@
                             <div class="form-group">
                                 <input class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6" type="password" placeholder="Ваш пароль" name="registration_form[plainPassword]" autocomplete="off" />
                             </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6" type="text" placeholder="Ваша фамилия" name="registration_form[lastname]" autocomplete="off" />
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6" type="text" placeholder="Ваше имя" name="registration_form[firstname]" autocomplete="off" />
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6" type="text" placeholder="Ваше отчество" name="registration_form[middlename]" autocomplete="off" />
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6" type="text" placeholder="Страна" name="registration_form[country]" autocomplete="off" />
+                            </div>
+                            <div class="form-group">
+                                <input class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6" type="text" placeholder="Город" name="registration_form[city]" autocomplete="off" />
+                            </div>
+                            <div class="form-group">
+                                <textarea class="form-control form-control-solid h-auto py-7 px-6 rounded-lg font-size-h6" type="textarea" placeholder="Расскажите о себе" name="registration_form[description]" autocomplete="off"></textarea>
+                            </div>
 
                             <div class="form-group">
                                 <label class="checkbox mb-0">
@@ -59,11 +77,11 @@
 
         <div class="content order-1 order-lg-2 d-flex flex-column w-100 pb-0" style="background-color: #B1DCED;">
             <div class="d-flex flex-column justify-content-center text-center pt-lg-40 pt-md-5 pt-sm-5 px-lg-0 pt-5 px-7">
-                <h3 class="display4 font-weight-bolder my-7 text-dark" style="color: #986923;">Amazing Wireframes
+                <h3 class="display4 font-weight-bolder my-7 text-dark" style="color: #986923;">GC.Platform
                 </h3>
                 <p class="font-weight-bolder font-size-h2-md font-size-lg text-dark opacity-70">
-                    User Experience & Interface Design, Product Strategy<br />
-                    Web Application SaaS Solutions
+                    ---- <br />
+                    ----
                 </p>
             </div>
 
