--- a/cp2020/templates/admin/stage/show.html.twig
+++ b/cp2020/templates/admin/stage/show.html.twig
@@ -63,7 +63,7 @@
                 </div>
             </div>
         </div>
-
-        <a href="{{ path('stage_index') }}" class="btn btn-success">Назад к списку stage</a>
+        
+        <a href="{{ path('stage_index') }}" >Назад к списку stage</a>
     </div>
 {% endblock %}
