--- a/cp2020/templates/admin/vacancy/index.html.twig
+++ b/cp2020/templates/admin/vacancy/index.html.twig
@@ -2,48 +2,103 @@
 
 {% block title %}Vacancy index{% endblock %}
 
+{% block subheader %}
+    <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
+        <div class=" container  d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <!--begin::Info-->
+            <div class="d-flex align-items-center flex-wrap mr-1">
+                <!--begin::Mobile Toggle-->
+                <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
+                    <span></span>
+                </button>
+
+                <div class="d-flex align-items-baseline flex-wrap mr-5">
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Вакансии</h5>
+
+                    <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Главная</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Модератор</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Вакансии</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="d-flex align-items-center">
+                <a href="{{ path('vacancy_new') }}" class="btn btn-primary font-weight-bolder btn-sm">
+                    Создать новую вакансию
+                </a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block body %}
-    <h1>Vacancy index</h1>
+     <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card card-custom card-stretch gutter-b">
+                    <div class="card-body pt-2 pb-0">
+                        <!--begin::Table-->
+                        <div class="table-responsive">
+                            <table class="table table-borderless table-vertical-center">
+                                <thead>
+                                    <tr>
+                                        <th class="p-0" style="width: 50px"></th>
+                                        <th class="p-0" style="min-width: 200px"></th>
+                                        <th class="p-0" style="min-width: 140px"></th>
+                                        <th class="p-0" style="min-width: 140px"></th>
+                                        <th class="p-0"></th>
+                                        <th class="p-0"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for vacancy in vacancies %}
+                                        <tr>
+                                            <td class="pl-0 py-5">
+                                                <div class="symbol symbol-50 symbol-light mr-2">
+                                                    <span class="symbol-label">
+                                                        <img src="/assets/media/svg/misc/003-puzzle.svg" class="h-50 align-self-center" alt="">
+                                                    </span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <a href="#" class="text-dark font-weight-bolder text-hover-primary mb-1 font-size-lg">
+                                                    {{ vacancy.title }}
+                                                </a>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Title</th>
-                <th>Description</th>
-                <th>MinCost</th>
-                <th>MaxCost</th>
-                <th>TypeIntern</th>
-                <th>Expired</th>
-                <th>PublichedAt</th>
-                <th>Conditions</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for vacancy in vacancies %}
-            <tr>
-                <td>{{ vacancy.id }}</td>
-                <td>{{ vacancy.title }}</td>
-                <td>{{ vacancy.description }}</td>
-                <td>{{ vacancy.minCost }}</td>
-                <td>{{ vacancy.maxCost }}</td>
-                <td>{{ vacancy.typeIntern }}</td>
-                <td>{{ vacancy.Expired ? vacancy.Expired|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ vacancy.PublichedAt ? vacancy.PublichedAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ vacancy.conditions }}</td>
-                <td>
-                    <a href="{{ path('vacancy_show', {'id': vacancy.id}) }}">show</a>
-                    <a href="{{ path('vacancy_edit', {'id': vacancy.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="10">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                                                <span class="text-muted font-weight-bold d-block">Название компании</span>
+                                            </td>
+                                            <td>от {{ vacancy.minCost }}руб</td>
+                                            <td>до {{ vacancy.maxCost }}руб</td>
+                                            <td>{{ vacancy.PublichedAt ? vacancy.PublichedAt|date('Y-m-d H:i:s') : '' }}</td>
 
-    <a href="{{ path('vacancy_new') }}">Create new</a>
+                                            <td class="text-right pr-0">
+                                                <a href="{{ path('vacancy_show', {'id': vacancy.id}) }}" class="btn btn-light">
+                                                    Смотреть
+                                                </a>
+
+                                                <a href="{{ path('vacancy_edit', {'id': vacancy.id}) }}" class="btn btn-light">
+                                                    Изменить
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    {% else %}
+                                    <tr>
+                                        <td colspan="6">Ничего нет</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
