Add design for user pages : moderator

--- a/cp2020/templates/admin/user/new.html.twig
+++ b/cp2020/templates/admin/user/new.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Create User{% endblock %}
 
 {% block subheader %}
     <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
@@ -11,7 +11,7 @@
                 </button>
 
                 <div class="d-flex align-items-baseline flex-wrap mr-5">
-                    <h5 class="text-dark font-weight-bold my-1 mr-5">Изменение профиля</h5>
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Создание профиля</h5>
 
                     <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
                         <li class="breadcrumb-item">
@@ -21,7 +21,7 @@
                             <a class="text-muted">Модератор</a>
                         </li>
                         <li class="breadcrumb-item">
-                            <a class="text-muted">Изменение профиля</a>
+                            <a class="text-muted">Создание профиля</a>
                         </li>
                     </ul>
                 </div>
