--- a/cp2020/templates/admin/user/index.html.twig
+++ b/cp2020/templates/admin/user/index.html.twig
@@ -2,48 +2,100 @@
 
 {% block title %}User index{% endblock %}
 
+{% block subheader %}
+    <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
+        <div class=" container  d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <!--begin::Info-->
+            <div class="d-flex align-items-center flex-wrap mr-1">
+                <!--begin::Mobile Toggle-->
+                <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
+                    <span></span>
+                </button>
+
+                <div class="d-flex align-items-baseline flex-wrap mr-5">
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Студенты</h5>
+
+                    <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Главная</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Модератор</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Студенты</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="d-flex align-items-center">
+                <a href="{{ path('user_new') }}" class="btn btn-primary font-weight-bolder btn-sm">
+                    Создать пользователя
+                </a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block body %}
-    <h1>User index</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card card-custom card-stretch gutter-b">
+                    <div class="card-body pt-2 pb-0">
+                        <div class="table-responsive">
+                            <table class="table table-borderless table-vertical-center">
+                                <thead>
+                                    <tr>
+                                        <th class="p-0" style="width: 50px"></th>
+                                        <th class="p-0" style="min-width: 200px"></th>
+                                        <th class="p-0" style="min-width: 140px"></th>
+                                        <th class="p-0" style="min-width: 140px"></th>
+                                        <th class="p-0"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for user in users %}
+                                        <tr>
+                                            <td class="pl-0 py-5">
+                                                <div class="symbol symbol-50 symbol-light mr-2">
+                                                    <span class="symbol-label">
+                                                        <img src="/assets/media/svg/misc/003-puzzle.svg" class="h-50 align-self-center" alt="">
+                                                    </span>
+                                                </div>
+                                            </td>
+                                            <td>
+                                                <a href="#" class="text-dark font-weight-bolder text-hover-primary mb-1 font-size-lg">
+                                                    {{ user.firstname|default('anonimous') }} {{ user.lastname|default('user') }}
+                                                </a>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Email</th>
-                <th>Roles</th>
-                <th>Firstname</th>
-                <th>Lastname</th>
-                <th>Middlename</th>
-                <th>City</th>
-                <th>Country</th>
-                <th>Description</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user in users %}
-            <tr>
-                <td>{{ user.id }}</td>
-                <td>{{ user.email }}</td>
-                <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
-                <td>{{ user.firstname }}</td>
-                <td>{{ user.lastname }}</td>
-                <td>{{ user.middlename }}</td>
-                <td>{{ user.city }}</td>
-                <td>{{ user.country }}</td>
-                <td>{{ user.description }}</td>
-                <td>
-                    <a href="{{ path('user_show', {'id': user.id}) }}">show</a>
-                    <a href="{{ path('user_edit', {'id': user.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="12">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                                                <span class="text-muted font-weight-bold d-block">{{ user.email }}</span>
+                                            </td>
+                                            <td>{{ user.roles ? user.roles|json_encode : '' }}</td>
+                                            <td>{{ user.middlename|default('Middle name is empty') }}</td>
 
-    <a href="{{ path('user_new') }}">Create new</a>
+                                            <td class="text-right pr-0">
+                                                <a href="{{ path('user_show', {'id': user.id}) }}" class="btn btn-light">
+                                                    Смотреть
+                                                </a>
+
+                                                <a href="{{ path('user_edit', {'id': user.id}) }}" class="btn btn-light">
+                                                    Изменить
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    {% else %}
+                                    <tr>
+                                        <td colspan="6">Ничего нет</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
