--- a/cp2020/templates/admin/vacancy/edit.html.twig
+++ b/cp2020/templates/admin/vacancy/edit.html.twig
@@ -26,6 +26,10 @@
                     </ul>
                 </div>
             </div>
+
+            <div class="d-flex align-items-right">
+                {{ include('admin/vacancy/_delete_form.html.twig') }}
+            </div>
         </div>
     </div>
 {% endblock %}
