Add design for education pages : moderator

--- a/cp2020/templates/admin/layout.html.twig
+++ b/cp2020/templates/admin/layout.html.twig
@@ -26,7 +26,13 @@
 
                         <li class="menu-item menu-item-rel">
                             <a href="{{ path('user_stage_progress_index') }}" class="menu-link">
-                                <span class="menu-text">Этапы студента</span>
+                                <span class="menu-text">Прогресс</span>
+                            </a>
+                        </li>
+
+                        <li class="menu-item menu-item-rel">
+                            <a href="{{ path('user_education_index') }}" class="menu-link">
+                                <span class="menu-text">Образование</span>
                             </a>
                         </li>
 
