--- a/cp2020/templates/admin/user_education/index.html.twig
+++ b/cp2020/templates/admin/user_education/index.html.twig
@@ -1,36 +1,110 @@
 {% extends 'admin/layout.html.twig' %}
 {% block title %}UserEducation index{% endblock %}
 
+{% block subheader %}
+    <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
+        <div class=" container  d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <div class="d-flex align-items-center flex-wrap mr-1">
+                <button class="burger-icon burger-icon-left mr-4 d-inline-block d-lg-none" id="kt_subheader_mobile_toggle">
+                    <span></span>
+                </button>
+
+                <div class="d-flex align-items-baseline flex-wrap mr-5">
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Образование</h5>
+
+                    <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Главная</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Модератор</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Образование</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+
+            <div class="d-flex align-items-center">
+                <a href="{{ path('user_education_new') }}" class="btn btn-primary font-weight-bolder btn-sm">
+                    Создать запись
+                </a>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block body %}
-    <h1>UserEducation index</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-lg-12">
+                <div class="card card-custom card-stretch gutter-b">
+                    <div class="card-body pt-2 pb-0">
+                        <!--begin::Table-->
+                        <div class="table-responsive">
+                            <table class="table table-borderless table-vertical-center">
+                                <thead>
+                                    <tr>
+                                        <th class="p-0" style="width: 50px"></th>
+                                        <th class="p-0" style="min-width: 200px"></th>
+                                        <th class="p-0" style="min-width: 140px"></th>
+                                        <th class="p-0" style="min-width: 140px"></th>
+                                        <th class="p-0"></th>
+                                        <th class="p-0"></th>
+                                    </tr>
+                                </thead>
+                                <tbody>
+                                    {% for user_education in user_educations %}
+                                        <tr>
+                                            <td class="pl-0 py-5">
+                                                <div class="symbol symbol-50 symbol-light mr-2">
+                                                    <span class="symbol-label">
+                                                        <img src="/assets/media/svg/misc/003-puzzle.svg" class="h-50 align-self-center" alt="">
+                                                    </span>
+                                                </div>
+                                            </td>
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>StartDate</th>
-                <th>EndDate</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for user_education in user_educations %}
-            <tr>
-                <td>{{ user_education.id }}</td>
-                <td>{{ user_education.startDate ? user_education.startDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>{{ user_education.endDate ? user_education.endDate|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('user_education_show', {'id': user_education.id}) }}">show</a>
-                    <a href="{{ path('user_education_edit', {'id': user_education.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="4">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+                                            <td>
+                                                <a href="#" class="text-dark font-weight-bolder text-hover-primary mb-1 font-size-lg">
+                                                    {{ user_education.education.title }}
+                                                </a>
 
-    <a href="{{ path('user_education_new') }}">Create new</a>
+                                                <span class="text-muted font-weight-bold d-block">Название учреждения</span>
+                                            </td>
+
+                                            <td>
+                                                {{ user_education.startDate ? user_education.startDate|date('Y-m-d H:i:s') : '' }}
+
+                                                <span class="text-muted font-weight-bold d-block">Дата начала обучения</span>
+                                            </td>
+                                            <td>
+                                                {{ user_education.endDate ? user_education.endDate|date('Y-m-d H:i:s') : '' }}
+                                                
+                                                <span class="text-muted font-weight-bold d-block">Дата окончания обучения</span>
+                                            </td>
+
+                                            <td class="text-right pr-0">
+                                                <a href="{{ path('user_education_show', {'id': user_education.id}) }}" class="btn btn-light">
+                                                    Смотреть
+                                                </a>
+
+                                                <a href="{{ path('user_education_edit', {'id': user_education.id}) }}" class="btn btn-light">
+                                                    Изменить
+                                                </a>
+                                            </td>
+                                        </tr>
+                                    {% else %}
+                                    <tr>
+                                        <td colspan="6">Ничего нет</td>
+                                    </tr>
+                                    {% endfor %}
+                                </tbody>
+                            </table>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
