--- a/cp2020/templates/admin/user_stage_progress/_delete_form.html.twig
+++ b/cp2020/templates/admin/user_stage_progress/_delete_form.html.twig
@@ -1,5 +1,5 @@
 <form method="post" action="{{ path('user_stage_progress_delete', {'id': user_stage_progress.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_method" value="DELETE">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ user_stage_progress.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Удалить</button>
 </form>
