--- a/cp2020/templates/admin/user_stage_progress/show.html.twig
+++ b/cp2020/templates/admin/user_stage_progress/show.html.twig
@@ -2,25 +2,49 @@
 
 {% block title %}UserStageProgress{% endblock %}
 
+{% block subheader %}
+    <div class="subheader py-2 py-lg-6  subheader-transparent " id="kt_subheader">
+        <div class=" container  d-flex align-items-center justify-content-between flex-wrap flex-sm-nowrap">
+            <div class="d-flex align-items-center flex-wrap mr-1">
+                <div class="d-flex align-items-baseline flex-wrap mr-5">
+                    <h5 class="text-dark font-weight-bold my-1 mr-5">Просмотр прогресса</h5>
+
+                    <ul class="breadcrumb breadcrumb-transparent breadcrumb-dot font-weight-bold p-0 my-2 font-size-sm">
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Главная</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Модератор</a>
+                        </li>
+                        <li class="breadcrumb-item">
+                            <a class="text-muted">Просмотр прогесса</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+{% endblock %}
+
 {% block body %}
-    <h1>UserStageProgress</h1>
+    <div class="container">
+        <div class="card card-custom p-6 gutter-b">
+            <div class="card-body">
+                <h2 class="text-dark mb-8">{{ user_stage_progress.status }}</h2>
 
-    <table class="table">
-        <tbody>
-            <tr>
-                <th>Id</th>
-                <td>{{ user_stage_progress.id }}</td>
-            </tr>
-            <tr>
-                <th>Status</th>
-                <td>{{ user_stage_progress.status }}</td>
-            </tr>
-        </tbody>
-    </table>
+                <h4 class="font-weight-bold text-dark mb-4">Описание</h4>
+                <div class="text-dark-50 line-height-lg mb-8">
+                    <p>Этап {{ user_stage_progress.stage.title }}</p>
+                </div>
+            </div>
 
-    <a href="{{ path('user_stage_progress_index') }}">back to list</a>
+            <div class="card-footer d-flex">
+                <a href="{{ path('user_stage_progress_edit', {'id': user_stage_progress.id}) }}" class="btn btn-primary mr-3">Изменить</a>
 
-    <a href="{{ path('user_stage_progress_edit', {'id': user_stage_progress.id}) }}">edit</a>
+                {{ include('admin/user_stage_progress/_delete_form.html.twig') }}
+            </div>
+        </div>
 
-    {{ include('user_stage_progress/_delete_form.html.twig') }}
+        <a href="{{ path('user_stage_progress_index') }}" class="btn btn-success">Назад к списку вакансий</a>
+    </div>
 {% endblock %}
